Fix overlapping labels in Files.app's gallery new UI.
The styles showing the labels when the page width is > 1000px was not overriding the original styles because the style had lower priority. This patch fixes this issue by adding a body prefix to the style declaration.

TBR=yoshiki@chromium.org
TEST=Launch Files.app, open a picture, try to edit. Be sure that the window is large enough to show the labels.
BUG=235789

Review URL: https://chromiumcodereview.appspot.com/14972004

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@198708 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: be9cb3c2d22dfccec5204f7eb1254b11ea91d282

--- a/chrome/browser/resources/file_manager/css/gallery.css
+++ b/chrome/browser/resources/file_manager/css/gallery.css
@@ -599,16 +599,16 @@ body .gallery > .toolbar button {
 }
 
 /* Show labels if there is enough space. */
-@media (min-width: 1000px) {
+@media (min-width: 1050px) {
 
-  .gallery .edit-main button {
+  body .gallery .edit-main button {
     background-position: 5px center;
     min-width: 0;  /* Reset. */
     padding: 0 10px 0 35px;
     width: auto;
   }
 
-  .gallery > .toolbar button span {
+  body .gallery > .toolbar button span {
     display: inline;
   }
 
